--- a/word_cloud.Rmd
+++ b/word_cloud.Rmd
@@ -2,18 +2,20 @@
 title: "Word Cloud"
 output: 
   html_document:
+    code_folding: hide
     toc: true
     toc_float: true
 ---
 
 ```{r}
 library(tidyverse)
+library(plotly)
 library(tidytext)
 library(RColorBrewer)
 library(tidytext)
 library(wordcloud2)
 library(knitr)
-library(DT)
+library(webshot)
 ```
 
 Read in tidy wine data and generate subsets for new world, old world, higher-rating (>=90), and lower-rating (<90) wines.
@@ -61,7 +63,7 @@ wine_top10_word <- function(wine_subset){
     anti_join(wine_word, stop_words)
   
   # remove more uninformative words in our study
-  other_meaningless <- data.frame(word = c("wine","drink","flavors","notes","finish", "blend",   "palate", "cabernet", "pinot","chardonnay", "aromas", "black", "red", "wine", "rose", "rosé", "sparkling"))
+  other_meaningless <- data.frame(word = c("wine","drink","flavors","notes","finish", "structure", "blend", "age",  "palate", "cabernet", "pinot","noir", "chardonnay", "aromas", "black", "red", "wine", "rose", "rosé", "sparkling"))
   wine_word = 
     wine_word %>% 
     anti_join(other_meaningless, by = "word")
@@ -75,15 +77,15 @@ wine_top10_word <- function(wine_subset){
   wine_word %>% head(10) %>% as_tibble()
 }
 
-wine_top10_word(red_df)
-wine_top10_word(white_df)
-wine_top10_word(rose_df)
-wine_top10_word(sparkling_df)
+#wine_top10_word(red_df)
+#wine_top10_word(white_df)
+#wine_top10_word(rose_df)
+#wine_top10_word(sparkling_df)
 
-wine_top10_word(high_red)
-wine_top10_word(low_red)
-wine_top10_word(new_red)
-wine_top10_word(old_red)
+#wine_top10_word(high_red)
+#wine_top10_word(low_red)
+#wine_top10_word(new_red)
+#wine_top10_word(old_red)
 ```
 
 * Create word cloud for each type (red, white, rose, and sparkling)
@@ -104,7 +106,7 @@ wine_word_cloud <- function(wine_subset, color1, color2) {
     anti_join(wine_word, stop_words)
   
   # remove more uninformative words in our study
-  other_meaningless <- data.frame(word = c("wine","drink","flavors","notes","finish", "blend",   "palate", "cabernet", "pinot", "chardonnay", "aromas", "black", "red", "wine", "rose", "rosé", "sparkling"))
+  other_meaningless <- data.frame(word = c("wine","drink","flavors","notes","finish", "structure", "blend", "age",  "palate", "cabernet", "pinot", "noir", "chardonnay", "aromas", "black", "red", "wine", "rose", "rosé", "sparkling"))
   wine_word = 
     wine_word %>% 
     anti_join(other_meaningless, by = "word")
@@ -114,22 +116,28 @@ wine_word_cloud <- function(wine_subset, color1, color2) {
   wine_word = wine_word %>% 
     anti_join(nums, by = "word")
   
-  # plot word cloud using image of the wine bottle as a mask
-  wine_word %>%
-    wordcloud2(figPath = "./image/wine_bottle.png", size = 0.58, color = color1, backgroundColor =   color2)
-  
-  # searchable data table for words
-  # red_word %>%
-  #  DT::datatable()
+  # plot word cloud
+  wine_word %>% head(100) %>% 
+    wordcloud2(size = 0.58, color = color1, backgroundColor =   color2)
 }
 
-wine_word_cloud(red_df, "red", "white")
+#par(mfrow = c(3,2))
+wine_word_cloud(red_df, "red", "white") 
 wine_word_cloud(white_df, "orange", "white")
-wine_word_cloud(rose_df, "pink", "white")
-wine_word_cloud(sparkling_df, "green", "white")
+#wine_word_cloud(rose_df, "pink", "white")
+#wine_word_cloud(sparkling_df, "green", "white")
 
-wine_word_cloud(high_red, "blue", "white")
-wine_word_cloud(low_red, "purple", "white")
+#wine_word_cloud(high_red, "blue", "white")
+#wine_word_cloud(low_red, "purple", "white")
 ```
 
+```{r include = FALSE}
+library(webshot)
+library("htmlwidgets")
+red_word <- wine_word_cloud(red_df, "red", "white")
+saveWidget(red_word, "tmp.html", selfcontained = F)
+webshot("tmp.html", "./image/red_word.png", delay = 5, vwidth = 500, vheight = 500)
+file.remove("tmp.html")
+```
+![](./image/red_word.png)
 
